Bugfix - with weights icon was not visible on mobile version

--- a/front-end/src/pages/parameters-page/parameters-page.styles.scss
+++ b/front-end/src/pages/parameters-page/parameters-page.styles.scss
@@ -28,6 +28,7 @@
             overflow: auto;
             height: 100%;
             width: 100%;
+            padding-bottom: 10vh;
         }
 
         .icon-with-text{
